# gcctest

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_cmake.bat  build_cmake.sh  build_test_client.bat  run_server_background.bat  run_server_background.sh  settings.config  test_client.cpp
docs/: API_REFERENCE.md  MEMORY_OPTIMIZATION.md  PERFORMANCE_GUIDE.md  QUICK_START.md
examples/: memory_optimization_example.cpp
include/: BufferConfig.h  ConnectionHandler.h  MessageBuffer.h  NetworkServer.h  ThreadPool.h
src/: BufferConfig.cpp  ConnectionHandler.cpp  MessageBuffer.cpp  NetworkServer.cpp  main.cpp
test/: README.md  build_windows.bat  build_windows_advanced.bat  quick_test.bat  run_test_client.bat  run_tests.bat  test_client.cpp  test_client_windows.cpp  test_config.bat
